[package]
name = "cli_wg"
version = "0.1.0"
authors = ["volodymyr.khytskyi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
failure = "0.1.5"
exitfailure = "0.5.1"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.1.0"
